Still setting up

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,10 +6,10 @@
           <li>
             <div class='user-view'>
               <div class='background'>
-                <img src='https://lh3.googleusercontent.com/-Q4FGCXrIpWI/Wf36IIpxcdI/AAAAAAAA45U/t3pl7jCtzec6gkRc9lTmjujAH4NgC4g7gCJkCGAYYCw/w1456-h3200-fcrop64=1,00000000ffffffff-rw/CollageMaker_20171104_023512271.jpg'>
+                <img src='{{ google_plus_bg }}'>
               </div>
-              <a href='{{ site.google_plus_com }}'><img class='circle' src='https://lh3.googleusercontent.com/-Qe-znfDIa6U/AAAAAAAAAAI/AAAAAAAA0TY/UTuTd-ykjrQ/s240-p-rw-no/photo.jpg'></a>
-              <a href='{{ site.google_plus_com }}'><span class='white-text name'>Giovanni Gallardo</span></a>
+              <a href='{{ site.google_plus_com }}'><img class='circle' src='{{ google_plus_image }}'></a>
+              <a href='{{ site.google_plus_com }}'><span class='white-text name'>{{ site.title }}</span></a>
               <a href='mailto:{{ site.email }}'><span class='white-text email'>{{ site.email }}</span></a>
             </div>
           </li>
