Fixed image sources

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,9 +6,9 @@
           <li>
             <div class='user-view'>
               <div class='background'>
-                <img src='{{ google_plus_bg }}'>
+                <img src='{{ site.google_plus_bg }}'>
               </div>
-              <a href='{{ site.google_plus_com }}'><img class='circle' src='{{ google_plus_image }}'></a>
+              <a href='{{ site.google_plus_com }}'><img class='circle' src='{{ site.google_plus_image }}'></a>
               <a href='{{ site.google_plus_com }}'><span class='white-text name'>{{ site.title }}</span></a>
               <a href='mailto:{{ site.email }}'><span class='white-text email'>{{ site.email }}</span></a>
             </div>
