--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,11 @@
     {% include footer.html %}
     <!-- /End Layout -->
 
+    <script rel='javascript'>
+      var toastHTML = "<span>This is the new website that's uner construction.</span><button class='btn-flat toast-action'>Return to full site</button>";
+      M.toast({html: toastHTML});
+    </script>
+
     <!-- Jquery -->
     <script rel='javascript' type='text/javascript' src='https://code.jquery.com/jquery-3.2.1.js'></script>
 
