--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
               <div class='background'>
                 <img src='{{ site.google_plus_bg }}'>
               </div>
-              <a href='{{ site.google_plus_com }}'><img class='circle' src='{{ site.google_plus_image }}'></a>
+              <a href='{{ site.google_plus_com }}'><img class='circle white' src='{{ site.google_plus_image }}'></a>
               <a href='{{ site.google_plus_com }}'><span class='white-text name'>{{ site.title }}</span></a>
               <a href='mailto:{{ site.email }}'><span class='white-text email'>{{ site.email }}</span></a>
             </div>
