--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang='en-US'>
   {% include head.html %}
-  <body onLoad='M.toast({html: "<span>This is the new website under construction.</span><button class='btn-flat toast-action'>Return to full site</button>"});'>
+  <body onLoad="M.toast({html: '<span>This is the new website under construction.</span><button class="btn-flat toast-action">Return to full site</button>'});">
     <!-- Start Layout -->
     {% include header.html %}
     <div class='post-ribbon'></div>
