--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
     <script rel='javascript' type='text/javascript' src="{{ '/js/framework7.js' | prepend: site.baseurl }}"></script>
 
     <!-- Materialize JS Library -->
-    <script rel='javascript' type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js'></script>
+    <script rel='javascript' type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/js/materialize.min.js'></script>
     <script rel='javascript' type='text/javascript' src="{{ '/js/init.js' | prepend: site.baseurl }}"></script>
     {% if site.pagination_type == 'ops' %}
     <script rel='javascript' type='text/javascript' src="{{ '/js/site.js' | prepend: site.baseurl }}"></script>
