--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
     <nav role='navigation'>
       <div class='nav-wrapper container'>
         <a id='logo-container' href='/' class='brand-logo center'>{{ site.title }}</a>
-        <ul id='slide-out' class='side-nav'>
+        <ul id='slide-out' class='sidenav'>
           <li>
             <div class='user-view'>
               <div class='background'>
@@ -21,6 +21,7 @@
           {% endfor %}
         </ul>
         <a href='#' data-activates='slide-out' class='sidenav-button'><i class='material-icons'>menu</i></a>
+        <a href='#' data-target='slide-out' class='sidenav-trigger'><i class='material-icons'>menu</i></a>
       </div>
     </nav>
   </header>
