--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,4 +1,4 @@
-    <script type='text/javascript' src='https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js'></script>
-    <script type='text/javascript' src='/assets/js/index.js'></script>
+    <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js'></script>
+    <script type='text/javascript' src='/assets/js/init.js'></script>
   </body>
 </html>
