--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,17 @@
-    <header class=' mdc-top-app-bar mdc-top-app-bar--short'>
-      <div class='mdc-top-app-bar__row'>
-        <section class='mdc-top-app-bar__section mdc-top-app-bar__section--align-start'>
-          <button class='material-icons mdc-top-app-bar__navigation-icon--unbounded'>menu</button><span class='mdc-top-app-bar__title'>{{ site.title }}</span> </section>
-        <section class='mdc-top-app-bar__section mdc-top-app-bar__section--align-end'>
-          <button class='material-icons mdc-top-app-bar__action-item--unbounded' aria-label='Bookmark this page'>bookmark</button>
-        </section>
+  <nav>
+    <div class='nav-wrapper'>
+      <a href='#' class='brand-logo center'>{{ site.title }}</a>
+    </div>
+  </nav>
+  <ul id='slide-out' class='sidenav'>
+    <li><div class='user-view'>
+      <div class='background'>
+        <img src='images/office.jpg'>
       </div>
-    </header>
-    {{content}}
+      <a href='#user'><img class='circle' src='images/yuna.jpg'></a>
+      <a href='#name'><span class='white-text name'>{{ site.title }}</span></a>
+      <a href='#email'><span class='white-text email'>{{ site.email }}</span></a>
+    </div></li>
+    <li><a href='/about/' class='waves-effect'>About</a></li>
+  </ul>
+  <a href='#' data-target='slide-out' class='sidenav-trigger'><i class='material-icons'>menu</i></a>
