--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,4 +1,13 @@
-{% include head.html %}
-{% include header.html %}
-{{ content }}
-{% include foot.html %}
+---
+layout: default
+---
+
+{% if page.title %}
+	<div class="page-header">
+		<h2>{{ page.title }}</h2>
+	</div>
+{% endif %}
+
+<article class="content">
+	{{ content }}
+</article>
