--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -5,15 +5,15 @@ background_image_path:
 ---
 
 {% if page.title %}
-	<div class="page-header">
+	<div class='page-header'>
 		<h2>{{ page.title }} Advice</h2>
 	</div>
 {% endif %}
 
-<article class="content">
-	<p class="editable">You're currently looking at advice categorised under <strong>{{ page.title }}</strong>. <a href="{{ site.baseurl }}/advice/">View all advice</a> instead.</p>
+<article class='content'>
+	<p class='editable'>You're currently looking at advice categorised under <strong>{{ page.title }}</strong>. <a href='{{ site.baseurl }}/advice/'>View all advice</a> instead.</p>
 
-	<ol class="post-list">
+	<ol class='post-list'>
 		{% for post in page.posts %}
 			{% include post-summary.html post=post %}
 		{% endfor %}
