--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,11 +3,11 @@ layout: default
 ---
 
 {% if page.title %}
-	<div class="page-header">
+	<div class='page-header'>
 		<h2>{{ page.title }}</h2>
 	</div>
 {% endif %}
 
-<article class="content">
+<article class='content'>
 	{{ content }}
 </article>
