--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,15 +7,15 @@ layout: page
 <div>{{ content }}</div>
 
 <h2>Meet the author</h2>
-<div class="post-author staff">
-	{% assign author_id = page.author_staff_member | prepend: "/staff_members/" | append: "/" %}
-	{% assign author = site.staff_members | where: "url", author_id | first %}
+<div class='post-author staff'>
+	{% assign author_id = page.author_staff_member | prepend: '/staff_members/' | append: '/' %}
+	{% assign author = site.staff_members | where: 'url', author_id | first %}
 
 	{% include staff-member.html member=author %}
 </div>
 
 <h2>Keep reading</h2>
-<ol class="post-links post-list">
+<ol class='post-links post-list'>
 	{% if page.next %}
 		{% include post-summary.html post=page.next %}
 	{% elsif page.previous %}
@@ -25,7 +25,7 @@ layout: page
 
 {% if site.disqus_shortname %}
 	<h2>Have your say</h2>
-	<div class="post-comments" id="disqus_thread"></div>
+	<div class='post-comments' id='disqus_thread'></div>
 
 	<script>
 		/**
@@ -44,5 +44,5 @@ layout: page
 		(d.head || d.body).appendChild(s);
 		})();
 	</script>
-	<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+	<noscript>Please enable JavaScript to view the <a href='https://disqus.com/?ref_noscript'>comments powered by Disqus.</a></noscript>
 {% endif %}
