--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -98,10 +98,7 @@
 
 			<div class='legal-line'>
 				<p class='container'>
-					&copy; {{ site.time | date: '%Y' }} {{ site.data.company.title }} &bull;
-					<a href='{{ site.baseurl }}/terms/'>Terms</a>
-					&bull;
-					Template by <a href='http://cloudcannon.com/'>CloudCannon</a>
+					&copy; {{ site.time | date: '%Y' }} {{ site.data.company.title }}
 				</p>
 			</div>
 		</footer>
