--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@
 		{% else %}
 			<section class='quote-section'>
 				<p class='container editable'>
-					<a href='{{ site.baseurl }}/advice/'>Read our published advice</a> for an introduction and quick tips on various areas of the law.
+					<a href='{{ site.baseurl }}/advice/'>Read our published beliefs</a> for an introduction and quick insight on what we believe.
 				</p>
 			</section>
 		{% endif %}
