--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 
 		<link rel='stylesheet' href='//fonts.googleapis.com/css?family=Quattrocento|Vollkorn:400,400i,700,700i'>
 		<link rel='stylesheet' href='{{ site.baseurl }}/css/main.css'>
-		<link rel='icon' type='image/png' href='{{ site.baseurl }}/siteicon.png'>
+		<link rel='icon' type='image/png' href='{{ site.baseurl }}/uploads/favicon.ico'>
 
 		{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
 			<script>
