--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en">
 	<head>
-		<meta charset='utf-8'>
-		<meta name='viewport' content='width=device-width, initial-scale=1'>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		{% seo %}
 		{% feed_meta %}
 
-		<link rel='stylesheet' href='//fonts.googleapis.com/css?family=Quattrocento|Vollkorn:400,400i,700,700i'>
-		<link rel='stylesheet' href='{{ site.baseurl }}/css/main.css'>
-		<link rel='icon' type='image/png' href='{{ site.baseurl }}/uploads/favicon.ico'>
+		<link rel="apple-touch-icon" href="{{ site.baseurl }}/apple-touch-icon.png">
+		<link rel="icon" type="image/png" href="{{ site.baseurl }}/touch-icon.png" sizes="192x192">
+		<link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicon.png">
+
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300|Rubik:300">
+		<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
 
 		{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
 			<script>
@@ -22,83 +26,53 @@
 	</head>
 
 	<body>
-		<header style="background-image: url('{% include relative-src.html src=page.background_image_path %}');" {% if page.large_header %}class='main-hero'{% endif %}>
-			<div class='container'>
-				<h1><a href='{{ site.baseurl }}/'>{{ site.data.company.title }}</a></h1>
-				<nav>
-					<ul>
-						{% assign nav_pages = site.html_pages | where: 'show_in_navigation', true | sort: 'navigation_order' %}
-						{% for nav_page in nav_pages %}
-							<li><a {% if nav_page.url == page.url %}class='active'{% endif %} href='{{ site.baseurl }}{{ nav_page.url }}'>{{ nav_page.title }}</a></li>
-						{% endfor %}
-					</ul>
-				</nav>
+		<header id="mainHeader">
+			<div class="container">
+				<div class="company-name">
+					<a href="{{ site.baseurl }}/">
+						<span class="dark-logo"><img width="104" height="38" src="{{ site.baseurl }}/images/logo/dark.svg" alt="dark frisco logo"></span>
+						<span class="light-logo"><img width="104" height="38" src="{{ site.baseurl }}/images/logo/light.svg" alt="light frisco logo"></span>
+					</a>
+				</div>
+				{% include navigation.html %}
+				<p class="editor-link"><a style="display:inline;" href="cloudcannon:collections/_data/navigation.yml" class="btn"><strong>&#9998;</strong> Edit navigation</a></p>
 			</div>
 		</header>
 
-		<section class='main'>
-			<div class='container'>
-				{{ content }}
-			</div>
-		</section>
-
-		{% if page.call_to_action == 'Map' and site.google_maps_javascript_api_key %}
-			<section class='map-section'>
-				<div id='map'></div>
-			</section>
-		{% elsif page.call_to_action == 'Contact' %}
-			<section class='quote-section'>
-				<p class='container editable'>
-					<a href='{{ site.baseurl }}/contact/'>Contact us</a> if you're interested. Free transportation and home Bible studies available upon request!
-				</p>
-			</section>
-		{% else %}
-			<section class='quote-section'>
-				<p class='container editable'>
-					<a href='{{ site.baseurl }}/advice/'>Read our published beliefs</a> for an introduction and quick insight on what we believe.
-				</p>
-			</section>
-		{% endif %}
+		{{ content }}
 
 		<footer>
-			<div class='container'>
-				<p class='editor-link'><a href='cloudcannon:collections/_data/footer.yml' class='btn'><strong>&#9998;</strong> Update Footer Sections</a></p>
-
-				<div class='footer-columns'>
-					{% for column in site.data.footer %}
-						<ul class='footer-links'>
-							<li>
-								<h2>{{ column.title }}</h2>
-							</li>
-							{% for link in column.links %}
-								<li>
-									<a {% if link.new_window %}target='_blank'{% endif %} href='{% include relative-src.html src=link.link %}' {% if link.social_icon %}class='{{ link.social_icon | slugify }}-icon'{% endif %}>
-										{% if link.social_icon %}
-											{% include social-icon.html icon=link.social_icon %}
-										{% endif %}
-
-										{{ link.name }}
-									</a>
-								</li>
-							{% endfor %}
-						</ul>
-					{% endfor %}
-
-					<ul class='footer-links'>
+			<div class="container">
+				<p class="editor-link"><a href="cloudcannon:collections/_data/footer.yml" class="btn"><strong>&#9998;</strong> Edit footer</a></p>
+				<ul class="footer-left-links">
+					{% for link in site.data.footer.left_links %}
 						<li>
-							<h2>{{ site.data.company.title }}</h2>
+							<a {% if link.new_window %}target="_blank"{% endif %} href="{% include relative-src.html src=link.link %}" {% if link.social_icon %}class="{{ link.social_icon | slugify }}-icon"{% endif %}>
+								{% if link.social_icon %}{% include social-icon.html icon=link.social_icon %}{% endif %}
+								{{ link.name }}
+							</a>
 						</li>
-						<li>{{ site.data.company.description }}</li>
-						<li><a href='{{ site.baseurl }}/feed.xml'>{% include social-icon.html icon='RSS' %} Subscribe with RSS</a></li>
-					</ul>
-				</div>
-			</div>
-
-			<div class='legal-line'>
-				<p class='container'>
-					&copy; {{ site.time | date: '%Y' }} {{ site.data.company.title }}
+					{% endfor %}
+				</ul>
+				<ul class="footer-right-links">
+					{% for link in site.data.footer.right_links %}
+						<li>
+							<a {% if link.new_window %}target="_blank"{% endif %} href="{% include relative-src.html src=link.link %}" {% if link.social_icon %}class="{{ link.social_icon | slugify }}-icon"{% endif %}>
+								{% if link.social_icon %}{% include social-icon.html icon=link.social_icon %}{% endif %}
+								{{ link.name }}
+							</a>
+						</li>
+					{% endfor %}
+				</ul>
+				<p class="copyright">
+					<a href="https://cloudcannon.com/">
+						Template by CloudCannon
+					</a>
 				</p>
 			</div>
 		</footer>
+
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+		<script src="{{ site.baseurl }}/js/main.js"></script>
 	</body>
 </html>
