--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,12 +2,13 @@
 layout: default
 ---
 
-{% if page.title %}
-	<div class='page-header'>
-		<h2>{{ page.title }}</h2>
+<section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
+	<div class="inner-hero text-container">
+		<div class="hero-text-container">
+			<h1>{{ page.title }}</h1>
+			<p class="subtext">{{ page.description }}</p>
+		</div>
 	</div>
-{% endif %}
+</section>
 
-<article class='content'>
-	{{ content }}
-</article>
+{{ content }}
