--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,47 +2,51 @@
 layout: page
 ---
 
-{% include post-summary-details.html post=page %}
+<section>
+	<div class="blog-post text-container">
+		<p class="editor-link"><a href="cloudcannon:collections/{{ page.path }}" class="btn"><strong>&#9998;</strong> Edit Post</a></p>
+		{% include post-title.html post=page %}
 
-<div>{{ content }}</div>
+		<div class="post-content">
+			{{ content }}
 
-<h2>Meet the author</h2>
-<div class='post-author staff'>
-	{% assign author_id = page.author_staff_member | prepend: '/staff_members/' | append: '/' %}
-	{% assign author = site.staff_members | where: 'url', author_id | first %}
+			<div class="author">
+				{% assign author_id = page.author_staff_member | prepend: "/staff_members/" | append: "/" %}
+				{% assign author = site.staff_members | where: "url", author_id | first %}
+				<div class="square-image" style="background-image: url('{% include relative-src.html src=author.image_path %}')"></div>
+				<p class="blurb">{{ author.blurb }}</p>
+			</div>
 
-	{% include staff-member.html member=author %}
-</div>
+			<div class="blog-navigation">
+				{% if page.previous.url %}
+					<a class="prev" href="{% include relative-src.html src=page.previous.url %}">&laquo; {{ page.previous.title }}</a>
+				{% endif %}
+				{% if page.next.url %}
+					<a class="next" href="{% include relative-src.html src=page.next.url %}">{{ page.next.title }} &raquo;</a>
+				{% endif %}
+			</div>
 
-<h2>Keep reading</h2>
-<ol class='post-links post-list'>
-	{% if page.next %}
-		{% include post-summary.html post=page.next %}
-	{% elsif page.previous %}
-		{% include post-summary.html post=page.previous %}
-	{% endif %}
-</ol>
 
-{% if site.disqus_shortname %}
-	<h2>Have your say</h2>
-	<div class='post-comments' id='disqus_thread'></div>
+			{% if site.disqus_shortname and page.comments %}
+				<div id="disqus_thread"></div>
+				<script>
+						var disqus_shortname = '{{ site.disqus_shortname }}';
+						var disqus_config = function () {
+								this.page.url = "{{ page.url | prepend: site.url }}";
+								this.page.identifier = "{{ page.id }}";
+						};
 
-	<script>
-		/**
-		*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-		*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-		/*
-		var disqus_config = function () {
-		this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-		this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-		};
-		*/
-		(function() { // DON'T EDIT BELOW THIS LINE
-		var d = document, s = d.createElement('script');
-		s.src = '//{{ site.disqus_shortname }}.disqus.com/embed.js';
-		s.setAttribute('data-timestamp', +new Date());
-		(d.head || d.body).appendChild(s);
-		})();
-	</script>
-	<noscript>Please enable JavaScript to view the <a href='https://disqus.com/?ref_noscript'>comments powered by Disqus.</a></noscript>
-{% endif %}
+						(function() {  // DON'T EDIT BELOW THIS LINE
+								var d = document, s = d.createElement('script');
+
+								s.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+
+								s.setAttribute('data-timestamp', +new Date());
+								(d.head || d.body).appendChild(s);
+						})();
+				</script>
+				<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+			{% endif %}
+		</div>
+	</div>
+</section>
