--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,8 +65,8 @@
 					{% endfor %}
 				</ul>
 				<p class="copyright">
-					<a href="https://cloudcannon.com/">
-						Template by CloudCannon
+					<a href="https://gio1135.com/">
+						Site by gio1135
 					</a>
 				</p>
 			</div>
