--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,9 +27,9 @@
 		<header id="mainHeader">
 			<div class="container">
 				<div class="company-name">
-					<a href="{{ site.baseurl }}/">
-						<span class="dark-logo"><img width="104" height="38" src="{{ site.baseurl }}/images/logo/dark.svg" alt="dark frisco logo"></span>
-						<span class="light-logo"><img width="104" height="38" src="{{ site.baseurl }}/images/logo/light.svg" alt="light frisco logo"></span>
+					<a href="{{ site.baseurl }}/">Life Tabernacle
+						<!--<span class="dark-logo"><img width="104" height="38" src="{{ site.baseurl }}/images/logo/dark.svg" alt="dark frisco logo"></span>
+						<span class="light-logo"><img width="104" height="38" src="{{ site.baseurl }}/images/logo/light.svg" alt="light frisco logo"></span>-->
 					</a>
 				</div>
 				{% include navigation.html %}
