--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
 		<header id="mainHeader">
 			<div class="container">
 				<div class="company-name">
-					<a href="{{ site.baseurl }}/" height='38'>Life Tabernacle
+					<a href="{{ site.baseurl }}" height='38px'>Life Tabernacle
 						<!--<span class="dark-logo"><img width="104" height="38" src="{{ site.baseurl }}/images/logo/dark.svg" alt="dark frisco logo"></span>
 						<span class="light-logo"><img width="104" height="38" src="{{ site.baseurl }}/images/logo/light.svg" alt="light frisco logo"></span>-->
 					</a>
