Updated '_layouts/default.html' via CloudCannon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 		{% seo %}
 		{% feed_meta %}
 
-		<link rel="icon" type="image/png" href="{{ site.baseurl }}/images/siteicon.png">
+		<link rel="icon" type="image/png" href="{{ site.baseurl }}/siteicon.png">
 
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300|Rubik:300">
 		<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
