--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 
-<html lang="en-us">
+<html lang='en-us'>
 	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta charset='utf-8'>
+		<meta name='viewport' content='width=device-width, initial-scale=1'>
 
 		{% seo %}
 		{% feed_meta %}
 
-		<link rel="icon" type="image/png" href="{{ site.baseurl }}/siteicon.png">
+		<link rel='icon' type='image/png' href='{{ site.baseurl }}/siteicon.png'>
 
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300|Rubik:300">
-		<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
+		<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300|Rubik:300'>
+		<link rel='stylesheet' href='{{ site.baseurl }}/css/screen.css'>
 
 		{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
 			<script>
@@ -24,53 +24,53 @@
 	</head>
 
 	<body>
-		<header id="mainHeader">
-			<div class="container">
-				<div class="company-name">
-					<a href="{{ site.baseurl }}">
-						<span class="dark-logo"><img width="200" height="60" src="{{ site.baseurl }}/images/logo/dark.svg" alt="dark frisco logo"></span>
-						<span class="light-logo"><img width="200" height="60" src="{{ site.baseurl }}/images/logo/light.svg" alt="light frisco logo"></span>
+		<header id='mainHeader'>
+			<div class='container'>
+				<div class='company-name'>
+					<a href='{{ site.baseurl }}'>
+						<span class='dark-logo'><img width='200' height='60' src='{{ site.baseurl }}/images/logo/dark.svg' alt='dark frisco logo'></span>
+						<span class='light-logo'><img width='200' height='60' src='{{ site.baseurl }}/images/logo/light.svg' alt='light frisco logo'></span>
 					</a>
 				</div>
 				{% include navigation.html %}
-				<p class="editor-link"><a style="display:inline;" href="cloudcannon:collections/_data/navigation.yml" class="btn"><strong>&#9998;</strong> Edit navigation</a></p>
+				<p class='editor-link'><a style='display:inline;' href='cloudcannon:collections/_data/navigation.yml' class='btn'><strong>&#9998;</strong> Edit navigation</a></p>
 			</div>
 		</header>
 
 		{{ content }}
 
 		<footer>
-			<div class="container">
-				<p class="editor-link"><a href="cloudcannon:collections/_data/footer.yml" class="btn"><strong>&#9998;</strong> Edit footer</a></p>
-				<ul class="footer-left-links">
+			<div class='container'>
+				<p class='editor-link'><a href='cloudcannon:collections/_data/footer.yml' class='btn'><strong>&#9998;</strong> Edit footer</a></p>
+				<ul class='footer-left-links'>
 					{% for link in site.data.footer.left_links %}
 						<li>
-							<a {% if link.new_window %}target="_blank"{% endif %} href="{% include relative-src.html src=link.link %}" {% if link.social_icon %}class="{{ link.social_icon | slugify }}-icon"{% endif %}>
+							<a {% if link.new_window %}target='_blank'{% endif %} href='{% include relative-src.html src=link.link %}' {% if link.social_icon %}class='{{ link.social_icon | slugify }}-icon'{% endif %}>
 								{% if link.social_icon %}{% include social-icon.html icon=link.social_icon %}{% endif %}
 								{{ link.name }}
 							</a>
 						</li>
 					{% endfor %}
 				</ul>
-				<ul class="footer-right-links">
+				<ul class='footer-right-links'>
 					{% for link in site.data.footer.right_links %}
 						<li>
-							<a {% if link.new_window %}target="_blank"{% endif %} href="{% include relative-src.html src=link.link %}" {% if link.social_icon %}class="{{ link.social_icon | slugify }}-icon"{% endif %}>
+							<a {% if link.new_window %}target='_blank'{% endif %} href='{% include relative-src.html src=link.link %}' {% if link.social_icon %}class='{{ link.social_icon | slugify }}-icon'{% endif %}>
 								{% if link.social_icon %}{% include social-icon.html icon=link.social_icon %}{% endif %}
 								{{ link.name }}
 							</a>
 						</li>
 					{% endfor %}
 				</ul>
-				<p class="copyright">
-					<a href="https://gio1135.com/">
-						Site by gio1135
+				<p class='copyright'>
+					<a href='https://gio1135.com/' target='_blank'>
+						Designed by gio1135
 					</a>
 				</p>
 			</div>
 		</footer>
 
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-		<script src="{{ site.baseurl }}/js/main.js"></script>
+		<script src='//ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+		<script src='{{ site.baseurl }}/js/main.js'></script>
 	</body>
 </html>
